--- a/object-oriented-js/index.html
+++ b/object-oriented-js/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Object Oriented JS</h1>
-    <script src="./objects.js"></script>
+    <!-- <script src="./objects.js"></script> -->
+    <script src="./classes.js"></script>
 </body>
 </html>
