--- a/object-oriented-js/index.html
+++ b/object-oriented-js/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Object Oriented JS</h1>
     <!-- <script src="./objects.js"></script> -->
-    <script src="./classes.js"></script>
+    <!-- <script src="./classes.js"></script> -->
+    <script src="./promises.js"></script>
 </body>
 </html>
